{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 2707,
  "lineage": "81d27b45-d4ba-319c-dba4-015fb53e5859",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0474b5bfa31bac5a7",
            "arn": "arn:aws:ec2:eu-west-2:975049895597:instance/i-082fa3ae04a878eac",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-082fa3ae04a878eac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07cedf8c86fec5c7f",
            "private_dns": "ip-10-0-3-166.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c865328d20860482",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ea6522f947629b12",
            "tags": {
              "Name": "auth"
            },
            "tags_all": {
              "Name": "auth"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f166407fbf625cb4"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.security_groups.aws_security_group.private_ssh_traffic",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "service_heating",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0474b5bfa31bac5a7",
            "arn": "arn:aws:ec2:eu-west-2:975049895597:instance/i-09176c4a422e65809",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09176c4a422e65809",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00046a8fbcd8ccf1f",
            "private_dns": "ip-10-0-1-111.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.111",
            "public_dns": "ec2-13-40-221-189.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.221.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0574b370cc4348b42",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03424903f715cc0c2",
            "tags": {
              "Name": "service_heating"
            },
            "tags_all": {
              "Name": "service_heating"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01523768e246684e9",
              "sg-070d803bc5c4bd701",
              "sg-079207ca4d35fb910",
              "sg-0812b116798084141",
              "sg-0fc3b7f38e2ef7a28"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.security_groups.aws_security_group.allow_http",
            "module.security_groups.aws_security_group.allow_https",
            "module.security_groups.aws_security_group.allow_ssh",
            "module.security_groups.aws_security_group.egress_traffic",
            "module.security_groups.aws_security_group.smart_home_status",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "service_lighting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0474b5bfa31bac5a7",
            "arn": "arn:aws:ec2:eu-west-2:975049895597:instance/i-0a273c585d31375b5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a273c585d31375b5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d112dc2280eb7d9c",
            "private_dns": "ip-10-0-2-112.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.112",
            "public_dns": "ec2-18-134-141-142.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.141.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00caebaf1e0a3a0b0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c8746817c4b6fa14",
            "tags": {
              "Name": "service_lighting"
            },
            "tags_all": {
              "Name": "service_lighting"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01523768e246684e9",
              "sg-070d803bc5c4bd701",
              "sg-079207ca4d35fb910",
              "sg-0812b116798084141",
              "sg-0fc3b7f38e2ef7a28"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.security_groups.aws_security_group.allow_http",
            "module.security_groups.aws_security_group.allow_https",
            "module.security_groups.aws_security_group.allow_ssh",
            "module.security_groups.aws_security_group.egress_traffic",
            "module.security_groups.aws_security_group.smart_home_status",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "status",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0474b5bfa31bac5a7",
            "arn": "arn:aws:ec2:eu-west-2:975049895597:instance/i-0ff903894def5ba46",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ff903894def5ba46",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05190418efdc3d9c5",
            "private_dns": "ip-10-0-0-169.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.169",
            "public_dns": "ec2-18-170-60-249.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.170.60.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d6cb428f72e862bd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00083b632e201e042",
            "tags": {
              "Name": "status"
            },
            "tags_all": {
              "Name": "status"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01523768e246684e9",
              "sg-070d803bc5c4bd701",
              "sg-079207ca4d35fb910",
              "sg-0812b116798084141",
              "sg-0fc3b7f38e2ef7a28"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu",
            "module.security_groups.aws_security_group.allow_http",
            "module.security_groups.aws_security_group.allow_https",
            "module.security_groups.aws_security_group.allow_ssh",
            "module.security_groups.aws_security_group.egress_traffic",
            "module.security_groups.aws_security_group.smart_home_status",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internal_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:loadbalancer/app/Internal-load-balancer/d1a4634ca8b5e508",
            "arn_suffix": "app/Internal-load-balancer/d1a4634ca8b5e508",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-Internal-load-balancer-1356959934.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:loadbalancer/app/Internal-load-balancer/d1a4634ca8b5e508",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Internal-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f166407fbf625cb4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-090a6a216e43ecbbf"
              },
              {
                "subnet_id": "subnet-093444748640ddca8"
              },
              {
                "subnet_id": "subnet-0ea6522f947629b12"
              }
            ],
            "subnets": [
              "subnet-090a6a216e43ecbbf",
              "subnet-093444748640ddca8",
              "subnet-0ea6522f947629b12"
            ],
            "vpc_id": "vpc-0f94c58039884e297",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.private_ssh_traffic",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internal_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "internal_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:listener/app/Internal-load-balancer/d1a4634ca8b5e508/90349ac5dafd5f2e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/Internal-load-balancer-TG/cf438971b75917bf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:listener/app/Internal-load-balancer/d1a4634ca8b5e508/90349ac5dafd5f2e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:loadbalancer/app/Internal-load-balancer/d1a4634ca8b5e508",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internal_load_balancer.aws_lb.internal_load_balancer",
            "module.internal_load_balancer_target_group.aws_lb_target_group.internal_target_group",
            "module.security_groups.aws_security_group.private_ssh_traffic",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internal_load_balancer_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "internal_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/Internal-load-balancer-TG/cf438971b75917bf",
            "arn_suffix": "targetgroup/Internal-load-balancer-TG/cf438971b75917bf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/auth",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/Internal-load-balancer-TG/cf438971b75917bf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Internal-load-balancer-TG",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internal_load_balancer_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "public_ALB_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/Internal-load-balancer-TG/cf438971b75917bf-2024031218285323650000000a",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/Internal-load-balancer-TG/cf438971b75917bf",
            "target_id": "i-082fa3ae04a878eac"
          },
          "dependencies": [
            "module.ec2.aws_instance.auth",
            "module.ec2.data.aws_ami.ubuntu",
            "module.internal_load_balancer_target_group.aws_lb_target_group.internal_target_group",
            "module.security_groups.aws_security_group.private_ssh_traffic",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:loadbalancer/app/Public-facing-ALB/caa27ee38d472493",
            "arn_suffix": "app/Public-facing-ALB/caa27ee38d472493",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Public-facing-ALB-1385123412.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:loadbalancer/app/Public-facing-ALB/caa27ee38d472493",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Public-facing-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01523768e246684e9",
              "sg-070d803bc5c4bd701",
              "sg-079207ca4d35fb910",
              "sg-0812b116798084141",
              "sg-0fc3b7f38e2ef7a28"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00083b632e201e042"
              },
              {
                "subnet_id": "subnet-03424903f715cc0c2"
              },
              {
                "subnet_id": "subnet-0c8746817c4b6fa14"
              }
            ],
            "subnets": [
              "subnet-00083b632e201e042",
              "subnet-03424903f715cc0c2",
              "subnet-0c8746817c4b6fa14"
            ],
            "vpc_id": "vpc-0f94c58039884e297",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.allow_http",
            "module.security_groups.aws_security_group.allow_https",
            "module.security_groups.aws_security_group.allow_ssh",
            "module.security_groups.aws_security_group.egress_traffic",
            "module.security_groups.aws_security_group.smart_home_status",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_facing_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:listener/app/Public-facing-ALB/caa27ee38d472493/67fe90f485e8aa61",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not found :( ",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:listener/app/Public-facing-ALB/caa27ee38d472493/67fe90f485e8aa61",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:loadbalancer/app/Public-facing-ALB/caa27ee38d472493",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_load_balancer.aws_lb.app_load_balancer",
            "module.security_groups.aws_security_group.allow_http",
            "module.security_groups.aws_security_group.allow_https",
            "module.security_groups.aws_security_group.allow_ssh",
            "module.security_groups.aws_security_group.egress_traffic",
            "module.security_groups.aws_security_group.smart_home_status",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "dynamic_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/tg-lights/81d1921ebfe1a1cc",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:listener-rule/app/Public-facing-ALB/caa27ee38d472493/67fe90f485e8aa61/f7f554898086293f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/lights"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:listener-rule/app/Public-facing-ALB/caa27ee38d472493/67fe90f485e8aa61/f7f554898086293f",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:listener/app/Public-facing-ALB/caa27ee38d472493/67fe90f485e8aa61",
            "priority": 3,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_load_balancer.aws_lb.app_load_balancer",
            "module.public_load_balancer.aws_lb_listener.public_facing_alb_listener",
            "module.public_load_balancer_target_group.aws_lb_target_group.public_ALB_target_group",
            "module.security_groups.aws_security_group.allow_http",
            "module.security_groups.aws_security_group.allow_https",
            "module.security_groups.aws_security_group.allow_ssh",
            "module.security_groups.aws_security_group.egress_traffic",
            "module.security_groups.aws_security_group.smart_home_status",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/tg-heating/f5024b031d2eb84b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:listener-rule/app/Public-facing-ALB/caa27ee38d472493/67fe90f485e8aa61/31fd4e44dbfb8325",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/heating"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:listener-rule/app/Public-facing-ALB/caa27ee38d472493/67fe90f485e8aa61/31fd4e44dbfb8325",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:listener/app/Public-facing-ALB/caa27ee38d472493/67fe90f485e8aa61",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_load_balancer.aws_lb.app_load_balancer",
            "module.public_load_balancer.aws_lb_listener.public_facing_alb_listener",
            "module.public_load_balancer_target_group.aws_lb_target_group.public_ALB_target_group",
            "module.security_groups.aws_security_group.allow_http",
            "module.security_groups.aws_security_group.allow_https",
            "module.security_groups.aws_security_group.allow_ssh",
            "module.security_groups.aws_security_group.egress_traffic",
            "module.security_groups.aws_security_group.smart_home_status",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/tg-status/f91be32694d34b69",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:listener-rule/app/Public-facing-ALB/caa27ee38d472493/67fe90f485e8aa61/64d906cf99dd7eb8",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/status"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:listener-rule/app/Public-facing-ALB/caa27ee38d472493/67fe90f485e8aa61/64d906cf99dd7eb8",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:listener/app/Public-facing-ALB/caa27ee38d472493/67fe90f485e8aa61",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_load_balancer.aws_lb.app_load_balancer",
            "module.public_load_balancer.aws_lb_listener.public_facing_alb_listener",
            "module.public_load_balancer_target_group.aws_lb_target_group.public_ALB_target_group",
            "module.security_groups.aws_security_group.allow_http",
            "module.security_groups.aws_security_group.allow_https",
            "module.security_groups.aws_security_group.allow_ssh",
            "module.security_groups.aws_security_group.egress_traffic",
            "module.security_groups.aws_security_group.smart_home_status",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_load_balancer_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "public_ALB_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/tg-lights/81d1921ebfe1a1cc",
            "arn_suffix": "targetgroup/tg-lights/81d1921ebfe1a1cc",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/lights/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/tg-lights/81d1921ebfe1a1cc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-lights",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/tg-heating/f5024b031d2eb84b",
            "arn_suffix": "targetgroup/tg-heating/f5024b031d2eb84b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/heating/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/tg-heating/f5024b031d2eb84b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-heating",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/tg-status/f91be32694d34b69",
            "arn_suffix": "targetgroup/tg-status/f91be32694d34b69",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/status/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/tg-status/f91be32694d34b69",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-status",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_load_balancer_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "public_ALB_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/tg-lights/81d1921ebfe1a1cc-20240312184359954500000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/tg-lights/81d1921ebfe1a1cc",
            "target_id": "i-0a273c585d31375b5"
          },
          "dependencies": [
            "module.ec2.aws_instance.service_heating",
            "module.ec2.aws_instance.service_lighting",
            "module.ec2.aws_instance.status",
            "module.ec2.data.aws_ami.ubuntu",
            "module.public_load_balancer_target_group.aws_lb_target_group.public_ALB_target_group",
            "module.security_groups.aws_security_group.allow_http",
            "module.security_groups.aws_security_group.allow_https",
            "module.security_groups.aws_security_group.allow_ssh",
            "module.security_groups.aws_security_group.egress_traffic",
            "module.security_groups.aws_security_group.smart_home_status",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/tg-heating/f5024b031d2eb84b-20240312184359788800000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/tg-heating/f5024b031d2eb84b",
            "target_id": "i-09176c4a422e65809"
          },
          "dependencies": [
            "module.ec2.aws_instance.service_heating",
            "module.ec2.aws_instance.service_lighting",
            "module.ec2.aws_instance.status",
            "module.ec2.data.aws_ami.ubuntu",
            "module.public_load_balancer_target_group.aws_lb_target_group.public_ALB_target_group",
            "module.security_groups.aws_security_group.allow_http",
            "module.security_groups.aws_security_group.allow_https",
            "module.security_groups.aws_security_group.allow_ssh",
            "module.security_groups.aws_security_group.egress_traffic",
            "module.security_groups.aws_security_group.smart_home_status",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/tg-status/f91be32694d34b69-20240312184359853100000006",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:975049895597:targetgroup/tg-status/f91be32694d34b69",
            "target_id": "i-0ff903894def5ba46"
          },
          "dependencies": [
            "module.ec2.aws_instance.service_heating",
            "module.ec2.aws_instance.service_lighting",
            "module.ec2.aws_instance.status",
            "module.ec2.data.aws_ami.ubuntu",
            "module.public_load_balancer_target_group.aws_lb_target_group.public_ALB_target_group",
            "module.security_groups.aws_security_group.allow_http",
            "module.security_groups.aws_security_group.allow_https",
            "module.security_groups.aws_security_group.allow_ssh",
            "module.security_groups.aws_security_group.egress_traffic",
            "module.security_groups.aws_security_group.smart_home_status",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975049895597:security-group/sg-079207ca4d35fb910",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-079207ca4d35fb910",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Inbound HTTP traffic",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Inbound HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_inbound_traffic_http",
            "name_prefix": "",
            "owner_id": "975049895597",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975049895597:security-group/sg-070d803bc5c4bd701",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-070d803bc5c4bd701",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Inbound HTTP traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_inbound_traffic_https",
            "name_prefix": "",
            "owner_id": "975049895597",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975049895597:security-group/sg-0812b116798084141",
            "description": "Allow shh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0812b116798084141",
            "ingress": [
              {
                "cidr_blocks": [
                  "188.28.181.224/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow ssh",
            "name_prefix": "",
            "owner_id": "975049895597",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975049895597:security-group/sg-05d83a47dc0721325",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d83a47dc0721325",
            "ingress": [
              {
                "cidr_blocks": [
                  "188.28.181.224/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-security-group",
            "name_prefix": "",
            "owner_id": "975049895597",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.data.external.myip",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975049895597:security-group/sg-01523768e246684e9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-01523768e246684e9",
            "ingress": [],
            "name": "allow_egress_traffic",
            "name_prefix": "",
            "owner_id": "975049895597",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ssh_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975049895597:security-group/sg-0f166407fbf625cb4",
            "description": "Allow private SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0f166407fbf625cb4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              }
            ],
            "name": "allow ssh for private",
            "name_prefix": "",
            "owner_id": "975049895597",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "smart_home_status",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975049895597:security-group/sg-0fc3b7f38e2ef7a28",
            "description": "Security group for the Smart Home Status Service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc3b7f38e2ef7a28",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "smart-home-status",
            "name_prefix": "",
            "owner_id": "975049895597",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3368088314",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f166407fbf625cb4",
            "security_group_rule_id": "sgr-071e1bdce8b7ff56e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_ssh_traffic",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "my_ip_adress_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "188.28.181.224/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-37567324",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0812b116798084141",
            "security_group_rule_id": "sgr-0f71ca5855394db47",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.allow_ssh",
            "module.security_groups.data.external.myip",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "my_ip_adress_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1402635644",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0812b116798084141",
            "security_group_rule_id": "sgr-065d4dd0058a08e5f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.allow_ssh",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.169/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2361461725",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f166407fbf625cb4",
            "security_group_rule_id": "sgr-0cab731ba5c9c3ac0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_ssh_traffic",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_ssh_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-1284735775",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f166407fbf625cb4",
            "security_group_rule_id": "sgr-01f29a2accf7532b6",
            "self": false,
            "source_security_group_id": "sg-0f166407fbf625cb4",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_ssh_traffic",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_ssh_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3552040870",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f166407fbf625cb4",
            "security_group_rule_id": "sgr-093338e83762a732c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_ssh_traffic",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3000,
            "id": "sgrule-1718017929",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f166407fbf625cb4",
            "security_group_rule_id": "sgr-01e2cc06cffe78e2a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.private_ssh_traffic",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5769be0aa30841d",
            "association_id": "eipassoc-0e048242ce359ab01",
            "domain": "vpc",
            "id": "eipalloc-0e5769be0aa30841d",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0b0434ce18466e8cc",
            "private_dns": "ip-10-0-0-92.eu-west-2.compute.internal",
            "private_ip": "10.0.0.92",
            "public_dns": "ec2-3-10-78-23.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.78.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975049895597:internet-gateway/igw-013a912dc34c36815",
            "id": "igw-013a912dc34c36815",
            "owner_id": "975049895597",
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5769be0aa30841d",
            "association_id": "eipassoc-0e048242ce359ab01",
            "connectivity_type": "public",
            "id": "nat-0d102d815b1983347",
            "network_interface_id": "eni-0b0434ce18466e8cc",
            "private_ip": "10.0.0.92",
            "public_ip": "3.10.78.23",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00083b632e201e042"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975049895597:route-table/rtb-0e612e096ac4efec8",
            "id": "rtb-0e612e096ac4efec8",
            "owner_id": "975049895597",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d102d815b1983347",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.NAT_gateway",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975049895597:route-table/rtb-07944494ae53e5642",
            "id": "rtb-07944494ae53e5642",
            "owner_id": "975049895597",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-013a912dc34c36815",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0320a6d10067632ab",
            "route_table_id": "rtb-0e612e096ac4efec8",
            "subnet_id": "subnet-0ea6522f947629b12"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.NAT_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee09ab5a482cea40",
            "route_table_id": "rtb-0e612e096ac4efec8",
            "subnet_id": "subnet-090a6a216e43ecbbf"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.NAT_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4af1e1c28d1b730",
            "route_table_id": "rtb-0e612e096ac4efec8",
            "subnet_id": "subnet-093444748640ddca8"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip",
            "module.vpc.aws_nat_gateway.NAT_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdc3be502eb1e950",
            "route_table_id": "rtb-07944494ae53e5642",
            "subnet_id": "subnet-00083b632e201e042"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d743cde8d1388136",
            "route_table_id": "rtb-07944494ae53e5642",
            "subnet_id": "subnet-03424903f715cc0c2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e29ca4761f281ba",
            "route_table_id": "rtb-07944494ae53e5642",
            "subnet_id": "subnet-0c8746817c4b6fa14"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975049895597:subnet/subnet-0ea6522f947629b12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea6522f947629b12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049895597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private subnet 1"
            },
            "tags_all": {
              "Name": "Private subnet 1"
            },
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975049895597:subnet/subnet-090a6a216e43ecbbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090a6a216e43ecbbf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049895597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private subnet 2"
            },
            "tags_all": {
              "Name": "Private subnet 2"
            },
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975049895597:subnet/subnet-093444748640ddca8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093444748640ddca8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049895597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private subnet 3"
            },
            "tags_all": {
              "Name": "Private subnet 3"
            },
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975049895597:subnet/subnet-00083b632e201e042",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00083b632e201e042",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049895597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet 1"
            },
            "tags_all": {
              "Name": "Public subnet 1"
            },
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975049895597:subnet/subnet-03424903f715cc0c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03424903f715cc0c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049895597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet 2"
            },
            "tags_all": {
              "Name": "Public subnet 2"
            },
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975049895597:subnet/subnet-0c8746817c4b6fa14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8746817c4b6fa14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975049895597",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet 3"
            },
            "tags_all": {
              "Name": "Public subnet 3"
            },
            "vpc_id": "vpc-0f94c58039884e297"
          },
          "dependencies": [
            "module.vpc.aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:975049895597:vpc/vpc-0f94c58039884e297",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0581715a70e27e4dd",
            "default_route_table_id": "rtb-02ae6db32677be90c",
            "default_security_group_id": "sg-0ba33efe78f2effb3",
            "dhcp_options_id": "dopt-024e7316083c847ba",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f94c58039884e297",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ae6db32677be90c",
            "owner_id": "975049895597",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            }
          }
        }
      ]
    }
  ]
}